--- a/stucampus/static/styles/articles.css
+++ b/stucampus/static/styles/articles.css
@@ -91,5 +91,5 @@
 	margin-bottom: 8px;
 	padding-bottom: 3px;
 	color: #000;
-	border-bottom: 2px solid #ee4541;
+	border-bottom: 2px solid #48857f;
 }
