fixed background color

--- a/stucampus/static/styles/categories.css
+++ b/stucampus/static/styles/categories.css
@@ -73,7 +73,7 @@
 	position: relative;
 	overflow: hidden;
 	display: inline-block;
-	background: #cd3e3a;
+	background: #48857f;
 	text-decoration: none;
 	color: #fff;
 	font-size: 14px;
