--- a/stucampus/templates/base.html
+++ b/stucampus/templates/base.html
@@ -30,12 +30,6 @@
 </head>
 <script type="text/javascript">
     $(function(){
-        $('.home_nav > a').each(function(){
-           if( $(this).attr('href').search('^'+location.pathname,'i') == 0){
-                $(this).addClass('nav_current');
-                return false;
-            }
-        });
 
         $("img").each(function() {
             var original = $(this).attr("src");
@@ -112,7 +106,7 @@
             <div id="banners" class="b-container" style="left: 0px;">
             {% for nav_display_column in nav_display_columns %}
            
-                <a id="banner{{ forloop.counter }}" href="{% url 'articles:display' article.pk %}" style="left: 0rem;" >
+                <a id="banner{{ forloop.counter }}" href="{% url 'articles:display' nav_display_column.pk %}" style="left: 0rem;" >
                     <div class="blur">
                     </div>
                     <p class="banner_title">{{ nav_display_column.title | truncatechars:19 }}</p>
